sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/Inventory_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Inventory Adjustment</label>
    <nameField>
        <displayFormat>INADJ-{0000000000}</displayFormat>
        <label>Inventory Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>