sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Adjustment_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjustment GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>c2g__codaGeneralLedgerAccount__c.sanergy_showinv__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>