sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Cost_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Cost_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Transaction</label>
    <referenceTo>rstk__sytxncst__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>