sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Current_Division__c.field-meta.xml
<CustomField>
    <fullName>Current_Division__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Division</label>
    <referenceTo>rstk__sydiv__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>