sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>