sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>rstk__icitem__c.rstk__icitem_div__c</field>
            <operation>equals</operation>
            <valueField>$Source.Current_Division__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>