sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>