sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Journal_Ac_Issues__c.field-meta.xml
<CustomField>
    <fullName>Journal_Ac_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked indicates Issues with journal item accounts</description>
    <label>Journal Ac Issues</label>
    <type>Checkbox</type>
</CustomField>