sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>rstk__pjproj__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>