sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Qty_Impact__c.field-meta.xml
<CustomField>
    <fullName>Qty_Impact__c</fullName>
    <inlineHelpText>This field indicates whether the location quantity was incremented (value = I) or decremented (value of D) by the transaction.</inlineHelpText>
    <label>Qty Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>