sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/fields/Requesting_User__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting User</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>