sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_Transaction__c</columns>
    <columns>Inventory_Item__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Processed__c</columns>
    <columns>Qty_Impact__c</columns>
    <columns>Quantity__c</columns>
    <columns>Site__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>