sfSandBoxCode/force-app/main/default/objects/Inventory_Adjustment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Adjustment_GL_Account__c</columns>
    <columns>Cost_Transaction__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Department__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>